
[profile.max]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[profile.perf]
inherits = "max"
debug = 1
debuginfo-level = 1

[package]
name = "graveler"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.10.0"
simd_rand = { git = "https://github.com/martinothamar/simd-rand" }
